--- a/CafeProject/index.html
+++ b/CafeProject/index.html
@@ -53,10 +53,22 @@
       </div>
     </header>
 
-   div.
+   <div class="carousel">
+    <img src="img/blur1.jpg" alt="">
+    <div class="carousel-content">
+      <h2>ONLINE ORDERS</h2>
+      <p>
+        Ordering is quick and simple! Currently, all orders are 
+        routed to the nearest outlet based on your delivery 
+        address. Visit our FAQs for more details.
+      </p>
+      <button>
+        ORDER NOW
+      </button>
+    </div>
+   </div>
 
-    <div class="content">d</div>
-
+   
     <div class="location-content">
       <img src="img/imgloc.jpg" alt="" />
 
