--- a/CafeProject/index.html
+++ b/CafeProject/index.html
@@ -295,7 +295,7 @@
               </div>
 
               <div class="loc-add">
-                Acacia st. Pag-asa Rawis, Legazpi City, Albay
+                di matagpuan street, bgy dimakita sdadsadsa
               </div>
             </div>
           </div>
@@ -338,7 +338,7 @@
               </div>
 
               <div class="loc-add">
-                Acacia st. Pag-asa Rawis, Legazpi City, Albay
+                di matagpuan street, bgy dimakita sdadsadsa
               </div>
             </div>
           </div>
@@ -381,7 +381,7 @@
               </div>
 
               <div class="loc-add">
-                Acacia st. Pag-asa Rawis, Legazpi City, Albay
+                di matagpuan street, bgy dimakita sdadsadsa
               </div>
             </div>
           </div>
